--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction to Javascript</title>
 
-    <link rel="stylesheet" href="/assets/style/grid-style.css">
+    <link rel="stylesheet" href="assets/style/grid-style.css">
 </head>
 
 <body>
